--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
