--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -10,29 +10,41 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-
-    - name: code checkout
-      uses: actions/checkout@v2
-
-    - name: install the gcloud cli
-      uses: google-github-actions/setup-gcloud@v0
-      with:
-        project_id: ${{ secrets.GOOGLE_PROJECT }}
-        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-        install_components: 'gke-gcloud-auth-plugin'
-        export_default_credentials: true
-
-    - name: build and push the docker image
-      env:
-        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-      run: |
-        gcloud auth configure-docker us-central1-docker.pkg.dev
-        docker build -t therapute .  
-        gcloud builds submit --region=us-central1 --tag us-east4-docker.pkg.dev/$GOOGLE_PROJECT/therapute-docker-repo/therapute-image:tag1
-
-    - name: deploy to gke
-      env:
-        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-      run: |
-        gcloud run deploy --image=us-east4-docker.pkg.dev/$GOOGLE_PROJECT/therapute-docker-repo/therapute-image:tag1  
+      - name: code checkout
+        uses: actions/checkout@v2
         
+      - name: Authenticate to Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+          service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
+          
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Use gcloud CLI
+        run: gcloud info
+      
+      - name: install the gcloud cli
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT }}
+          service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          install_components: 'gke-gcloud-auth-plugin'
+          export_default_credentials: true
+  
+      - name: build and push the docker image
+        env:
+          GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+        run: |
+          gcloud auth configure-docker us-central1-docker.pkg.dev
+          docker build -t therapute .  
+          gcloud builds submit --region=us-central1 --tag us-east4-docker.pkg.dev/$GOOGLE_PROJECT/therapute-docker-repo/therapute-image:tag1
+  
+      - name: deploy to gke
+        env:
+          GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+        run: |
+          gcloud run deploy --image=us-east4-docker.pkg.dev/$GOOGLE_PROJECT/therapute-docker-repo/therapute-image:tag1  
+          
