--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "chart.js": "^4.4.2",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "openai": "^4.40.2",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
