--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@nextui-org/react": "^2.3.6",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "openai": "^4.40.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
