--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/generative-ai": "^0.12.0",
     "@mui/icons-material": "^5.15.16",
     "@nextui-org/react": "^2.3.6",
     "chart.js": "^4.4.3",
